--- a/src/css/sobre-projeto.css
+++ b/src/css/sobre-projeto.css
@@ -21,8 +21,7 @@
     justify-content: space-evenly;
     align-items: center;
     /* border: 1px solid white; */
-    position: relative;
-    /* chatGPT */
+    position: relative; /* chatGPT */
 }
 
 #timeline::before {
@@ -32,8 +31,7 @@
     width: 75%;
     height: 2px;
     background-color: white;
-    z-index: -1;
-    /* Fica atrás dos pontos */
+    z-index: -1; /* Fica atrás dos pontos */
 }
 
 .pontos-importantes {
@@ -43,6 +41,10 @@
     height: 1.5rem;
     width: 1.5rem;
     margin: 10px;
-    position: relative;
-    /* chatGPT */
+    position: relative; /* chatGPT */
+    transition: 0.3s;
+}
+
+.pontos-importantes:hover {
+    background-color: green;
 }
