--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -21,9 +21,6 @@ footer {
     justify-content: center;
     align-items: center;
     height: 20vh;
-    /* margin: 10px; */
-    /* padding: 10px; */
-    /* border: 1px solid white; */
 }
 
 .links-footer {
@@ -32,4 +29,9 @@ footer {
     font-size: 15px;
     font-family: "JetBrains Mono", serif;
     margin: 10px;
+}
+
+.footer-icons {
+    color: green;
+    margin: 5px;
 }
