--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,13 +1,12 @@
 /* <header>
 <h1 id="titulo-principal">AquaPulse</h1>
 <div>
-    <a class="header-links" href="/index.html">Sobre</a>
-    <a class="header-links" href="/produtos.html">Produto</a>
-    <a class="header-links" href="/suporte.html">Suporte</a>
-    <a class="header-links" href="/faq.html">FAQ</a>
+    <a class="header-links" href="#sobre-projeto">Sobre</a>
+    <a class="header-links" href="#sobre-produto">Produto</a>
+    <a class="header-links" href="#footer">Suporte</a>
 </div>
 <div>
-    <a href="/usuarioTelaLogin.html"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
+    <a href="login.php"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
 </div>
 </header> */
 
@@ -17,7 +16,6 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-top: 0;
     height: 10vh;
 }
 
